--- a/.gitignore
+++ b/.gitignore
@@ -32,9 +32,17 @@ yarn-error.log*
 
 # env files (can opt-in for committing if needed)
 .env*
+!env.example
 
 # vercel
 .vercel
+
+# render
+.render/
+
+# logs
+logs
+*.log
 
 # typescript
 *.tsbuildinfo
